--- a/index.html
+++ b/index.html
@@ -167,7 +167,7 @@
 <h2>Contact Us</h2>
 <p>If you have any questions about this Privacy Policy, You can contact us:</p>
 <ul>
-<li>By email: support.fasofoods@gmail.com</li>
+<li>By email: contacts.digitaltech@gmail.com</li>
 </ul>
 </body>
 </html>
